# claude-conversation-extractor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EMERGENCY_RESTORE_INSTRUCTIONS.md  INSTALL.md  PROJECT_RESEARCH_SUMMARY.md  PR_BODY.md  README.md  RECORDING_GUIDE.md  RELEASE_NOTES_1.1.0.md  TEST_PLAN.md  VERIFY_WORKING_EXTRACTOR.sh  add_interactive.patch  bandit_report.json  build.zig  claude_tui_integration.py  conversation_stats.py  cross-platform-testing-issue.md  debug_fs  debug_fs.zig  debug_main  debug_main.zig  debug_test  debug_test.zig  demo-script.sh  demo_interactive.py  detailed_export.py  detailed_transcript.md  export_formats.py  extract_claude_logs.py  extractor.zig  interactive_ui.py  launch_tui.py  minimal_debug  minimal_debug.zig  parser_debug.txt  pyproject.toml  realtime_search.py  run_with_monitoring.sh  (+12 more)
.github/workflows/: publish.yml  test.yml
.zig-cache/o/013821a7cc1bc183fb8106fbf5e059c4/: extractor
.zig-cache/o/0161295f56244b6584fec5265feddf65/: libclaude_extractor.dylib
.zig-cache/o/018e37de3b87f34986843bffb4e157fd/: libclaude_extractor.dylib
.zig-cache/o/02c3d5cada13be6b583c0092a801f174/: extractor
.zig-cache/o/0492e799e28a88e458c3cc7ab7d3b52c/: extractor
.zig-cache/o/04ec05d9ef40abec6fe22bf0ce22426f/: libclaude_extractor.dylib
.zig-cache/o/053e28e5a02a370dddeb498383757f1d/: libclaude_extractor.dylib
.zig-cache/o/05473d04c71f1afd5c70e80f47bf7ef4/: libclaude_extractor.dylib
.zig-cache/o/06642378daf143cc1a32f38c86004f50/: libclaude_extractor.dylib
.zig-cache/o/076ae93f8e90009863d1d228b23f86e3/: extractor
.zig-cache/o/076ee3a06fb2dadeb3f9ce8ecbaea668/: libclaude_extractor.dylib
.zig-cache/o/07ad6c130a90670351daca017cde9ef0/: libclaude_extractor.dylib
.zig-cache/o/08a1758b38a58082c910fb1c1eff4d45/: libclaude_extractor.dylib
.zig-cache/o/0b456099bbd1c3a700cf7d5ba4904e34/: extractor
.zig-cache/o/0b7c3c14ea8a24aa6043411734e59a5c/: extractor
.zig-cache/o/0bfb67cdd00f8f1c2d316957f0c6f602/: extractor
.zig-cache/o/0c52505180cfcbc9695b1db1ec1c5cb9/: libclaude_extractor.dylib
.zig-cache/o/0c98742f8611947ea2570930a8eb6a63/: libclaude_extractor.dylib
.zig-cache/o/0cfaea1c5d68753944bd3201569e2147/: extractor
.zig-cache/o/0d503789f9c0f95d8fd8e3ccb6f13221/: libclaude_extractor.dylib
.zig-cache/o/0e7a9ee076a3b887d3bde0c5454c1c71/: extractor
.zig-cache/o/103055d8583f75961a2cf3752ff56900/: extractor
.zig-cache/o/117a127f54596e56d0f8ad6f993dcf47/: cimport.zig
.zig-cache/o/11913629969f39b218ad3398304b0171/: libclaude_extractor.dylib
.zig-cache/o/11e8af909b7c0a59b4465b040b965e6d/: libclaude_extractor.dylib
.zig-cache/o/12fb07bb80cdc154c7af881004c14c23/: extractor
.zig-cache/o/12fb6bcd059ba0243987506310cb05ef/: libclaude_extractor.dylib
.zig-cache/o/1356b5095f1bb52b1a2db90647c6a7a1/: libclaude_extractor.dylib
.zig-cache/o/152f1332ba2b93d869ed6d6f0e6e27fe/: libclaude_extractor.dylib
.zig-cache/o/17a4c8feeaaf1a1847d4dc4e07428ac5/: libclaude_extractor.dylib
.zig-cache/o/1d369d2967ddeaeff9cf25550978832d/: libclaude_extractor.dylib
.zig-cache/o/1dd8bef8ceebb88f256a5b78bfd7379e/: libclaude_extractor.dylib
.zig-cache/o/1f4ff798b6e9f6c8adeeb6088f0e342e/: extractor
.zig-cache/o/20f5062de24f537e1a4f497117ebb930/: libclaude_extractor.dylib
.zig-cache/o/22cbedb919feabf2ee0643501f86fbfb/: libclaude_extractor.dylib
.zig-cache/o/232d44e23983f5a390e0ffac48483c4e/: libclaude_extractor.dylib
.zig-cache/o/2352c30dbf8cf303000b26f96ec33669/: libclaude_extractor.dylib
.zig-cache/o/252a7a159760b5bdaaa8c2eb148e898e/: cimport.zig
.zig-cache/o/2658d5d7284dbb19fa141d089cb5abe8/: extractor
.zig-cache/o/26cb41777b143e56a36b67a9cb86c89f/: extractor
.zig-cache/o/27251e0beee37ff0d83a6710cb6dcc02/: cimport.h.d
.zig-cache/o/281c7da988f744086b3f3a6202977cff/: libclaude_extractor.dylib
.zig-cache/o/2936b1c7f70b6c55c6312db09b3daf75/: extractor
.zig-cache/o/2a58cbd08b39f1a403e7626a95eebe17/: extractor
.zig-cache/o/2c08aa49d7910df22f312c71a0ba14ed/: libclaude_extractor.dylib
.zig-cache/o/2cb161eaf673daae62c3fdd78078d9ef/: libclaude_extractor.dylib
.zig-cache/o/2cb9cdfcbb6449a783061b8e3b47d208/: libclaude_extractor.dylib
.zig-cache/o/2dd24902190ae9e67447926bbad3c004/: libclaude_extractor.dylib
.zig-cache/o/305af9b12265a7fc2caa3612c6d36452/: libclaude_extractor.dylib
.zig-cache/o/30764ae722816a8d1a531cadefaa1f97/: extractor
.zig-cache/o/30eb569a0f9d7805cdcd990018c2b2c6/: libclaude_extractor.dylib
.zig-cache/o/3192dd432ae33b55e74f3984a549f9a6/: extractor
claude_ui/: README.md  extractor  pubspec.yaml
claude_ui/lib/: app.dart  main.dart
claude_ui/linux/: CMakeLists.txt
claude_ui/macos/: extractor
claude_ui/windows/: CMakeLists.txt
doc/: thrash-compilation-improvements.md  thrash-language-spec.md  zig-compiler-optimization-bug-fix-plan.md
docs/: ANALYTICS_IMPLEMENTATION_PLAN.md
docs/architecture/: database-schema.md  implementation-guide.md  overview.md  performance-analysis.md  testing.md
rust_tui/: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  build.sh  pyproject.toml  verify_build.sh
rust_tui/benches/: tui_benchmarks.rs
rust_tui/python/claude_tui/: __init__.py  launcher.py
rust_tui/src/: app.rs  config.rs  events.rs  lib.rs  main.rs  python_bindings.rs  state.rs
rust_tui/src/backend/: export.rs  fs.rs  mod.rs  parser.rs  search.rs
rust_tui/src/ui/: mod.rs  theme.rs
rust_tui/src/ui/pages/: browser.rs  export.rs  header.rs  home.rs  mod.rs  modal.rs  search.rs  settings.rs  stats.rs  status_bar.rs
rust_tui/src/ui/widgets/: file_tree.rs  mod.rs  notification.rs  progress.rs  search_bar.rs
rust_tui/tests/: basic_test.rs
src/: extract_claude_logs.py
tests/: test_extractor.py  test_interactive_ui.py  test_realtime_search_comprehensive.py  test_realtime_search_coverage.py  test_realtime_search_integration.py  test_realtime_search_threading.py  test_realtime_search_ui.py  test_realtime_search_unit.py  test_search.py  test_search_integration.py
tests/fixtures/: sample_conversations.py
zig-out/lib/: libclaude_extractor.dylib
(+186 files in other folders)
