[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversation-extractor"
version = "1.1.0"
description = "Export Claude conversations, extract Claude Code logs, save chat history, search conversations with real-time results"
readme = "README.md"
authors = [
    {name = "Dustin Kirby", email = "dustin@zerosumquant.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
keywords = [
    "claude", "anthropic", "conversation", "export", "markdown", "logs", "cli",
    "claude-code", "extract-claude", "save-claude-conversations", "backup-claude",
    "claude-chat-history", "claude-logs", "export-claude-conversations",
    "claude-conversation-backup", "search-claude", "real-time-search"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/ZeroSumQuant/claude-conversation-extractor"
Documentation = "https://github.com/ZeroSumQuant/claude-conversation-extractor#readme"
Repository = "https://github.com/ZeroSumQuant/claude-conversation-extractor"
Issues = "https://github.com/ZeroSumQuant/claude-conversation-extractor/issues"

[project.scripts]
claude-logs = "extract_claude_logs:launch_interactive"
claude-extract = "extract_claude_logs:main"
claude-start = "extract_claude_logs:launch_interactive"

[tool.setuptools]
py-modules = ["extract_claude_logs", "interactive_ui", "search", "realtime_search"]

[tool.setuptools.packages.find]
where = ["."]
include = ["extract_claude_logs*"]
exclude = ["tests*"]