[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversation-extractor"
version = "1.1.0"
description = "Export Claude Code conversations from ~/.claude/projects. Extract, search, and backup Claude chat history to markdown files."
readme = "README.md"
authors = [
    {name = "Dustin Kirby", email = "dustin@zerosumquant.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
keywords = [
    "export-claude-code-conversations", "claude-conversation-extractor",
    "claude-code-export-tool", "backup-claude-code-logs", "save-claude-chat-history",
    "claude-jsonl-to-markdown", "extract-claude-sessions", "claude-code-no-export-button",
    "where-are-claude-code-logs-stored", "claude-terminal-logs", "anthropic-claude-code",
    "search-claude-conversations", "claude-code-logs-location", "~/.claude/projects",
    "export-claude-conversations", "extract-claude-code", "backup-claude-sessions"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/ZeroSumQuant/claude-conversation-extractor"
Documentation = "https://github.com/ZeroSumQuant/claude-conversation-extractor#readme"
Repository = "https://github.com/ZeroSumQuant/claude-conversation-extractor"
Issues = "https://github.com/ZeroSumQuant/claude-conversation-extractor/issues"

[project.scripts]
claude-extract = "extract_claude_logs:unified_main"
# Temporary alias for backward compatibility
claude-logs = "extract_claude_logs:unified_main"

[tool.setuptools]
py-modules = ["extract_claude_logs", "interactive_ui", "search_conversations", "realtime_search", "detailed_export", "export_formats", "conversation_stats"]

[tool.setuptools.packages.find]
where = ["."]
include = ["extract_claude_logs*"]
exclude = ["tests*"]