[package]
name = "claude-tui"
version = "0.1.0"
edition = "2021"
authors = ["Claude Conversation Extractor Team"]
license = "MIT"
description = "High-performance TUI for Claude Conversation Extractor"

[lib]
name = "claude_tui"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3", "pyo3-build-config"]

[[bin]]
name = "claude-tui"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Data structures and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# File system and paths
walkdir = "2.5"
dirs = "5.0"
glob = "0.3"

# Performance and caching
lru = "0.12"
dashmap = "6.0"
parking_lot = "0.12"
rayon = "1.10"

# Search and regex
regex = "1.11"
fuzzy-matcher = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"
config = "0.14"

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"], optional = true }

# Progress and async utilities
indicatif = "0.17"
futures = "0.3"
async-trait = "0.1"

# Compression for exports
flate2 = "1.0"
zip = "2.2"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Optional: for better performance
ahash = "0.8"
once_cell = "1.20"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.13"
pretty_assertions = "1.4"
mockall = "0.13"

[build-dependencies]
pyo3-build-config = { version = "0.22", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "tui_benchmarks"
harness = false